# STUDY-llama-index

./: .gitignore  README.md  pyproject.toml
notebooks/: Structured-LLM.ipynb  chatbot.ipynb
