[project]
name = "llama-index-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index>=0.12.12",
    "pydentic>=0.0.1.dev3",
    "python-dotenv>=1.0.1",
    "llama-index-agent-openai>=0.4.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
